IASC-157 fix search bar on IE8, replace icons with text for user menu on IE8
Former-commit-id: 817c2c031cd7762fc7a36a21b226c4dc27012c45

--- a/src/themes/iasc/assets/sass/components/_navigation.scss
+++ b/src/themes/iasc/assets/sass/components/_navigation.scss
@@ -38,7 +38,10 @@
   a {  
     color: $brand-primary;
     &:before { font-size: 24px; }
-    span { display: none; }
+    // Use the no transition to detect IE8 to not hide text because icons are not working. 
+    .csstransitions & {
+      span { display: none; }
+    }
     @media screen and (min-width: $screen-lg-min) {
       &:before { font-size: 19px; }
     }
